add: redis service and otp service
